@@ -122,6 +122,11 @@
       <Version Value="2"/>
     </PublishOptions>
     <RunParams>
+      <local>
+        <CommandLineParams Value="-opsiservice https://192.168.1.14:4447/rpc -clientid pctry5detlef.uib.local -username pctry5detlef.uib.local -password 2eb916a353d8604133a64e762ff45c88"/>
+        <LaunchingApplication Use="True"/>
+        <Display Use="True"/>
+      </local>
       <FormatVersion Value="2"/>
       <Modes Count="1">
         <Mode0 Name="default">
