@@ -8,6 +8,9 @@ opsi-winst/opsi-script (4.12.1.3) experimental; urgency=low
 
   * shellInAnIcon: on loglevel 9: reread teporary files and do not delete
   * oslog: logdatei property usedloglevel (this is real used log level with force_min_loglevel)
+  * osfunclin: new function getMyIpDeciceByDefaultRoute
+  * osparser: GetMACAddress2: use getMyIpDeciceByDefaultRoute
+  * osfunclin: more logging in getMyIpDeciceByDefaultRoute, getMyIpByDefaultRoute
 
 -- Detlef Oertel <d.oertel@uib.de>  Tue, 14 May 2019:15:00:00 +0200
 
